# pacman-ostree

./: CMakeLists.txt  Cargo.toml  README.md  main.py  main.yaml  services.yaml
src/: bubblewrap.rs  compose.rs  composepost.rs  container.rs  fsutil.rs  initramfs.rs  layered_packages.rs  layering.rs  main.rs  package_installer.rs  pacman-ostree-0-integration.conf  pacman_manager.rs  pool.rs  provider.rs  solver.rs
src/package_manager/: alpm_integration.rs  config.rs  installer.rs  mod.rs  pacman_hooks.rs
src/package_solver/: mod.rs  pool.rs  provider.rs
