[package]
name = "pacman-ostree"
version = "0.1.0"
edition = "2024"

[dependencies]
alpm = "4.0.3"
anyhow = "1.0.100"
camino = "1.2.0"
chrono = "0.4.42"
clap = "4.5.48"
fn-error-context = "0.2.1"
libc = "0.2.176"
ostree-ext = "0.15.3"
rustix = "1.1.2"
serde = "1.0.227"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
tokio = "1.47.1"
tracing = "0.1.41"
